[project]
name = "comfyui-gb-player"
version = "0.0.1"
description = "Simple ComfyUI Game Boy [Advance] Player based on gbaONLiNE and IodineGBA"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT License" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.urls]
Repository = "https://github.com/WASasquatch/ComfyUI_GB_Player"
"Bug Tracker" = "https://github.com/WASasquatch/ComfyUI_GB_Player/issues"

[tool.comfy]
PublisherId = "was"
DisplayName = "ComfyUI GB Player"
requires-comfyui = ">=1.0.0"
